tests/baselines/reference/privateStaticNotAccessibleInClodule.errors.txt
tests/cases/conformance/classes/members/accessibility/privateStaticNotAccessibleInClodule.ts(9,20): error TS8010: Property 'bar' is private and only accessible within struct 'C'.


==== tests/cases/conformance/classes/members/accessibility/privateStaticNotAccessibleInClodule.ts (1 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        private foo: string;
        private static bar: string;
    }
    
    module C {
        export var y = C.bar; // error
                       ~~~~~
!!! error TS8010: Property 'bar' is private and only accessible within struct 'C'.
    }